# recipe_creator

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_init.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/auth/: middleware.rs  mod.rs  password.rs  routes.rs  session.rs
src/llm/: gemini.rs  mod.rs
src/pantry/: routes.rs
src/recipes/: mod.rs  prompt.rs  routes.rs
static/: loading.js  style.css
templates/: base.html  generate.html  history.html  login.html  pantry.html  recipe.html
