[package]
name = "recipe_creator"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
sha2 = "0.10"
